--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ apply from: "runmanager.gradle"
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 version = "1.0"
-group = "com.ideallandframework.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group = "com.ax4987.magicandordinary" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "magicandordinary"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
